--- a/css/elzero.css
+++ b/css/elzero.css
@@ -1,7 +1,8 @@
 /* Start Variables */
 :root {
-    --main-color:#2196f3;
-    --main-color-alt:#1787e0; 
+    --main-color: #2196f3;
+    --main-color-alt: #1787e0;
+    --main-transition: 0.3s;
 }
 
 /* End Variables */
@@ -25,6 +26,10 @@ body {
     font-family: 'Open Sans', sans-serif;
     font-family: 'Varela Round', sans-serif;
     font-family: 'Work Sans', sans-serif;
+}
+
+a {
+    text-decoration: none;
 }
 
 ul {
@@ -63,3 +68,47 @@ ul {
 }
 
 /* End Globle Rules */
+
+/* Start Header */
+.header {
+    background-color: white;
+    position: relative;
+    -webkit-box-shadow: 0 0 10px #DDD;
+    -moz-box-shadow: 0 0 10px #DDD;
+    box-shadow: 0 0 10px #DDD;
+
+}
+
+.header .container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+    position: relative;
+}
+
+.header .logo {
+    color: var(--main-color);
+    font-size: 26px;
+    font-weight: bold;
+    height: 72px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.header .main-nav{
+    display: flex;
+}
+
+.header .main-nav > li > a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 72px;
+    position: relative;
+    color: black;
+    padding: 0 30px;
+    transition: var(--main-transition);
+}
+/* End Header */
