--- a/css/elzero.css
+++ b/css/elzero.css
@@ -170,7 +170,7 @@ ul {
     content: "";
     position: absolute;
     left: 0;
-    top:-40px;
+    top: -40px;
     width: 100%;
     height: 100%;
     background-color: #ececec;
@@ -191,10 +191,24 @@ ul {
     flex: 1;
 }
 
+@media (max-width:991px) {
+    .landing .text {
+        text-align: center;
+    }
+
+}
+
 .landing .text h1 {
     font-size: 40px;
     margin: 0;
     letter-spacing: -2px;
+}
+
+@media (max-width:767px) {
+    .landing .text h1 {
+     font-size: 28px;
+    }
+    
 }
 
 .landing .text p {
@@ -202,12 +216,36 @@ ul {
     line-height: 1.7;
     margin: 5px 0 0;
     color: #666;
+    max-width: 500px;
+}
+
+@media (max-width:991px) {
+    .landing .text p {
+        margin: 10px auto;
+    }
+
+}
+
+@media (max-width:767px) {
+    .landing .text p {
+     font-size: 18px;
+    }
+    
 }
 
 
+
 .landing .image img {
+    position: relative;
     width: 600px;
-    max-width: 100%;
+    animation: up-and-down 5s linear infinite;
+}
+
+@media (max-width:991px) {
+    .landing .image {
+        display: none;
+    }
+
 }
 
 .landing .go-down {
@@ -224,6 +262,27 @@ ul {
 }
 
 .landing .go-down i {
-
+    animation: bouncing 1.5s infinite;
 }
+
 /* End Landing */
+
+/* Start Animation */
+@keyframes up-and-down {
+    0% , 100% {
+        top: 0;
+    }
+    50% {
+        top:-50px;
+    }
+}
+
+@keyframes bouncing {
+    0% , 10% , 20% , 50% , 80% , 100% {
+        transform: translateY(0);
+    }
+    40% , 60% {
+        transform: translateY(-15px);
+    }
+}
+/* End Animation */
