--- a/css/elzero.css
+++ b/css/elzero.css
@@ -3,6 +3,8 @@
     --main-color: #2196f3;
     --main-color-alt: #1787e0;
     --main-transition: 0.3s;
+    --main-padding-top:100px;
+    --main-padding-bottom:100px;
 }
 
 /* End Variables */
@@ -68,7 +70,7 @@ ul {
 }
 
 .main-title {
-    margin: 100px auto;
+    margin: 0 auto 80px;
     border: 2px solid black;
     padding: 10px 20px;
     font-size: 30px;
@@ -401,6 +403,46 @@ ul {
 }
 
 /* End Landing */
+
+/* Strat Articles */
+.articles {
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+    position: relative;
+}
+.articles .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill , minmax(250px , 1fr) );
+    gap:40px;
+}
+
+.articles .box {
+    box-shadow: 0 2px 15px rgb(0 0 0 / 10%);
+    background-color: white;
+    border-radius: 6px;
+    overflow: hidden;
+    transition: transform var(--main-transition) , box-shadow var(--main-transition);
+}
+
+.articles .box:hover {
+    transform: translateY(-10px);
+    box-shadow: 0 2px 15px rgb(0 0 0 / 20%);
+
+}
+
+.articles .box img{
+    width: 100%;
+    max-width: 100%;
+}
+
+.articles .box content{
+
+}
+
+.articles .box info{
+
+}
+/* End Articles */
 
 /* Start Animation */
 @keyframes up-and-down {
