--- a/css/elzero.css
+++ b/css/elzero.css
@@ -3,8 +3,9 @@
     --main-color: #2196f3;
     --main-color-alt: #1787e0;
     --main-transition: 0.3s;
-    --main-padding-top:100px;
-    --main-padding-bottom:100px;
+    --main-padding-top: 100px;
+    --main-padding-bottom: 100px;
+    --section-background: #ECECEC;
 }
 
 /* End Variables */
@@ -79,6 +80,7 @@ ul {
     z-index: 1;
     transition: var(--main-transition);
 }
+
 .main-title::before,
 .main-title::after {
     content: "";
@@ -86,10 +88,11 @@ ul {
     height: 12px;
     background-color: var(--main-color);
     position: absolute;
-    border-radius:50%;
-    top:50%;
+    border-radius: 50%;
+    top: 50%;
     transform: translateY(-50%);
 }
+
 .main-title::before {
     left: -30px;
 }
@@ -98,20 +101,20 @@ ul {
     right: -30px;
 }
 
-.main-title:hover::before  {
+.main-title:hover::before {
     z-index: -1;
     animation: left-move 0.5s linear forwards;
 }
 
-.main-title:hover::after  {
+.main-title:hover::after {
     z-index: -1;
     animation: right-move 0.5s linear forwards;
 }
 
 .main-title:hover {
     color: white;
-    border:2px solid white;
-    transition-delay: 0.5s ;
+    border: 2px solid white;
+    transition-delay: 0.5s;
 
 
 }
@@ -167,10 +170,10 @@ ul {
 
 }
 
-.header .main-nav>li:hover .mega-menu  {
+.header .main-nav>li:hover .mega-menu {
     opacity: 1;
     z-index: 100;
-    top:calc(100% + 1px);
+    top: calc(100% + 1px);
 }
 
 .header .main-nav>li>a {
@@ -213,6 +216,7 @@ ul {
 .header .main-nav>li>a:hover::before {
     left: 0;
 }
+
 .header .mega-menu {
     position: absolute;
     width: 100%;
@@ -224,14 +228,14 @@ ul {
     display: flex;
     gap: 40px;
     top: calc(100% + 50px);
-    transition: top var(--main-transition) , opacity var(--main-transition);
+    transition: top var(--main-transition), opacity var(--main-transition);
     opacity: 0;
 }
 
 @media (max-width:767px) {
     .header .mega-menu {
         flex-direction: column;
-        gap:0;
+        gap: 0;
         padding: 5px;
     }
 
@@ -249,7 +253,7 @@ ul {
 
 .header .mega-menu .links {
     min-width: 250px;
-    flex:1;
+    flex: 1;
 }
 
 .header .mega-menu .links li {
@@ -258,12 +262,12 @@ ul {
 }
 
 .header .mega-menu .links li:not(:last-child) {
-    border-bottom:  1px solid #E9E6E6;
+    border-bottom: 1px solid #E9E6E6;
 }
 
 @media (max-width:767px) {
     .header .mega-menu .links:first-of-type li:last-child {
-        border-bottom:  1px solid #E9E6E6;
+        border-bottom: 1px solid #E9E6E6;
     }
 
 }
@@ -294,8 +298,9 @@ ul {
 }
 
 .header .mega-menu .links li a i {
-    margin-right:10px ;
+    margin-right: 10px;
 }
+
 /* End Header */
 
 /* Start Landing */
@@ -343,9 +348,9 @@ ul {
 
 @media (max-width:767px) {
     .landing .text h1 {
-     font-size: 28px;
+        font-size: 28px;
     }
-    
+
 }
 
 .landing .text p {
@@ -365,9 +370,9 @@ ul {
 
 @media (max-width:767px) {
     .landing .text p {
-     font-size: 18px;
+        font-size: 18px;
     }
-    
+
 }
 
 
@@ -410,10 +415,11 @@ ul {
     padding-bottom: var(--main-padding-bottom);
     position: relative;
 }
+
 .articles .container {
     display: grid;
-    grid-template-columns: repeat(auto-fill , minmax(250px , 1fr) );
-    gap:40px;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 40px;
 }
 
 .articles .box {
@@ -421,7 +427,7 @@ ul {
     background-color: white;
     border-radius: 6px;
     overflow: hidden;
-    transition: transform var(--main-transition) , box-shadow var(--main-transition);
+    transition: transform var(--main-transition), box-shadow var(--main-transition);
 }
 
 .articles .box:hover {
@@ -430,71 +436,137 @@ ul {
 
 }
 
-.articles .box img{
+.articles .box img {
     width: 100%;
     max-width: 100%;
 }
 
-.articles .box .content{
+.articles .box .content {
     padding: 20px;
 }
 
-.articles .box .content h3{
+.articles .box .content h3 {
     margin: 0;
 }
 
-.articles .box .content p{
+.articles .box .content p {
     margin: 10px 0 0;
     line-height: 1.5;
-    color:#777;
+    color: #777;
 }
 
-.articles .box .info{
+.articles .box .info {
     padding: 20px;
-    border-bottom: 1px solid #E6E6E7;
+    border-top: 1px solid #E6E6E7;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
+
 .articles .box .info a {
-    color:var(--main-color);
+    color: var(--main-color);
     font-weight: bold;
 
 }
+
 .articles .box .info i {
-    color:var(--main-color);
+    color: var(--main-color);
 }
 
 .articles .box:hover .info i {
     animation: moving-arrow 0.6s linear infinite;
 }
+
 /* End Articles */
+
+/* Start Gallery */
+.gallery {
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+    position: relative;
+    background-color: var(--section-background);
+}
+
+.gallery .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 40px;
+}
+
+.gallery .box {
+    padding: 15px;
+    background-color: white;
+    box-shadow:  0px 12px 20px 0px rgb(0 0 0 / 13%) ,0px 2px 4px 0px rgb(0 0 0 / 12%) ;
+}
+
+.gallery .box .image {
+    position: relative;
+    overflow: hidden;
+}
+
+.gallery .box .image::before {
+    content: "";
+    position: absolute;
+    top:50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+    background-color: rgb(255 255 255 / 20%);
+    width: 0;
+    height: 0;
+    opacity: 0;
+    z-index: 2;
+}
+
+.gallery .box .image:hover::before{
+    animation: flashing 0.7s;
+}
+.gallery .box img {
+    max-width: 100%;
+    transition: var(--main-transition);
+}
+.gallery .box .image:hover img {
+    transform: rotate(5deg) scale(1.1);
+}
+
+/* End Gallery */
 
 /* Start Animation */
 @keyframes up-and-down {
-    0% , 100% {
+
+    0%,
+    100% {
         top: 0;
     }
+
     50% {
-        top:-50px;
+        top: -50px;
     }
 }
 
 @keyframes bouncing {
-    0% , 10% , 20% , 50% , 80% , 100% {
+
+    0%,
+    10%,
+    20%,
+    50%,
+    80%,
+    100% {
         transform: translateY(0);
     }
-    40% , 60% {
+
+    40%,
+    60% {
         transform: translateY(-15px);
     }
 }
 
-@keyframes left-move  {
+@keyframes left-move {
     50% {
         left: 0;
         width: 12px;
         height: 12px;
     }
+
     100% {
         left: 0;
         border-radius: 0;
@@ -503,12 +575,13 @@ ul {
     }
 }
 
-@keyframes right-move  {
+@keyframes right-move {
     50% {
         right: 0;
         width: 12px;
         height: 12px;
     }
+
     100% {
         right: 0;
         border-radius: 0;
@@ -522,4 +595,17 @@ ul {
         transform: translateX(10px);
     }
 }
+
+@keyframes flashing {
+    0% , 40% {
+        opacity: 1;
+  
+    }
+    100% {
+        opacity: 0;
+        width: 200%;
+        height: 200%;
+    }
+}
+
 /* End Animation */
