--- a/css/elzero.css
+++ b/css/elzero.css
@@ -572,11 +572,55 @@ ul {
     border-style: solid;
     border-width: 0px 0px 170px 500px;
     border-color: transparent transparent white transparent ;
+    transition: var(--main-transition);
 }
 
 .features .box .img-holder img {
     max-width: 100%;
 }
+
+.features .box:hover .img-holder::after{
+    border-width: 170px 500px 170px 0px;
+
+}
+
+.features .box h2 {
+    position: relative;
+    font-size: 40px;
+    margin: auto;
+    width: fit-content;
+}
+
+.features .box h2::after {
+    content: "";
+    position: absolute;
+    bottom: -20px;
+    left: 15px;
+    height: 5px;
+    background-color: red;
+    width: calc(100% - 30px);
+}
+
+.features .box p {
+    line-height: 2;
+    font-size: 20px;
+    margin: 30px 0;
+    padding: 25px;
+    color: #777;
+
+}
+
+.features .box a {
+    display: block;
+    border: 3px solid red;
+    width: fit-content;
+    margin: 0 auto 30px;
+    font-weight: bold;
+    font-size: 22px;
+    padding: 10px 30px;
+    color:red;
+}
+
 /* End Features */
 
 /* Start Animation */
