--- a/css/elzero.css
+++ b/css/elzero.css
@@ -584,6 +584,16 @@ ul {
 
 }
 
+@media (max-width:992px) {
+    .features .box .img-holder::after{
+        border-width: 0px 0px 170px 700px;
+    }
+    .features .box:hover .img-holder::after{
+        border-width: 170px 700px 170px 0px;
+    
+    }
+}
+
 .features .box h2 {
     position: relative;
     font-size: 40px;
@@ -597,7 +607,6 @@ ul {
     bottom: -20px;
     left: 15px;
     height: 5px;
-    background-color: red;
     width: calc(100% - 30px);
 }
 
@@ -612,13 +621,65 @@ ul {
 
 .features .box a {
     display: block;
-    border: 3px solid red;
+    border: 3px solid transparent;
     width: fit-content;
     margin: 0 auto 30px;
     font-weight: bold;
     font-size: 22px;
     padding: 10px 30px;
-    color:red;
+    border-radius: 6px;
+    transition: var(--main-transition);
+}
+
+.features .quality .img-holder::before{
+    background-color:  rgb(244 64 54 / 60%) ;
+}
+
+.features .quality h2::after{
+    background-color: #f44036;
+}
+.features .quality a{
+    color: #f44036;
+    border-color: #f44036;
+    background: linear-gradient(to right,#F44036 50% , white 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+}
+
+/* dsdsd */
+.features .time .img-holder::before{
+    background-color:  rgb(0 150 136 / 60%) ;
+}
+
+.features .time h2::after{
+    background-color: #009688;
+}
+.features .time a{
+    color: #009688;
+    border-color: #009688;
+    background: linear-gradient(to right,#009688 50% , white 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+}
+/* asdasd */
+.features .passion .img-holder::before{
+    background-color:  rgb(3 169 244 / 60%) ;
+}
+
+.features .passion h2::after{
+    background-color: #03a9f4;
+}
+.features .passion a{
+    color: #03a9f4;
+    border-color: #03a9f4;
+    background: linear-gradient(to right,#03a9f4 50% , white 50%);
+    background-size: 200% 100%;
+    background-position: right bottom;
+}
+
+.features .box:hover a {
+    background-position: left bottom;
+    color: white;
 }
 
 /* End Features */
