--- a/css/elzero.css
+++ b/css/elzero.css
@@ -79,6 +79,7 @@ ul {
     position: relative;
     z-index: 1;
     transition: var(--main-transition);
+    text-transform: uppercase;
 }
 
 .main-title::before,
@@ -729,6 +730,64 @@ ul {
     margin-bottom: 0;
 }
 /* End Testimonials */
+
+/* Start Team */
+.team {
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+    position: relative;
+    background-color: white;
+}
+
+.team .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+    gap: 30px;
+}
+
+.team .box {
+    position: relative;
+}
+
+.team .box::before {
+    content: "";
+    background-color: #f3f3f3;
+    position: absolute;
+    right: 0;
+    top: 0;
+    height: 100%;
+    width: calc(100% - 60px);
+    border-radius: 10px;
+    z-index: -2;
+}
+
+.team .box .data {
+
+}
+
+.team .box .data img {
+    width: 100%;
+
+}
+
+.team .box .data .social {
+
+}
+
+
+.team .box .info{
+
+}
+
+.team .box .info h3 {
+
+}
+
+.team .box .info p {
+
+}
+
+/* End Team */
 
 /* Start Animation */
 @keyframes up-and-down {
