--- a/css/elzero.css
+++ b/css/elzero.css
@@ -736,7 +736,6 @@ ul {
     padding-top: var(--main-padding-top);
     padding-bottom: var(--main-padding-bottom);
     position: relative;
-    background-color: white;
 }
 
 .team .container {
@@ -747,44 +746,105 @@ ul {
 
 .team .box {
     position: relative;
+    
 }
 
-.team .box::before {
+.team .box::before,
+.team .box::after {
     content: "";
-    background-color: #f3f3f3;
+    background-color: #F3f3f3;
     position: absolute;
     right: 0;
     top: 0;
     height: 100%;
-    width: calc(100% - 60px);
     border-radius: 10px;
+    transition: var(--main-transition);
+}
+
+.team .box::before{
+    width: calc(100% - 60px);
     z-index: -2;
 }
 
+@media (max-width:767px) {
+    .team .box::before{
+        width: 100%;
+    }
+}
+
+.team .box::after{
+    z-index: -1;
+    background-color: #e4e4e4;
+    width: 0;
+}
+
+.team .box:hover::after {
+    width: calc(100% - 60px);
+}
+
 .team .box .data {
+    display: flex;
+    align-items: center;
+    padding-top: 60px;
 
 }
 
 .team .box .data img {
-    width: 100%;
+    width: calc(100% - 60px);
+    border-radius: 10px;
+    transition: var(--main-transition);
 
 }
 
-.team .box .data .social {
+.team .box:hover img {
+    filter: grayscale(100%);
+}
 
+.team .box .data .social {
+    width: 60px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    gap:20px;
+}
+
+.team .box .data .social a {
+    width: 60px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;    
+}
+
+.team .box .data .social a:hover i {
+    color: var(--main-color);
+}
+
+.team .box .data .social i {
+    color: #777;
+    transition: var(--main-transition);
 }
 
 
 .team .box .info{
-
+    padding-left: 80px;
 }
 
 .team .box .info h3 {
-
+    margin-bottom: 0;
+    color: var(--main-color);
+    font-size: 22px;
+    transition: var(--main-transition);
 }
 
 .team .box .info p {
+    margin-top: 10px;
+    margin-bottom: 25px;
 
+}
+
+.team .box:hover .info h3 {
+    color: #777;
 }
 
 /* End Team */
