--- a/css/elzero.css
+++ b/css/elzero.css
@@ -497,7 +497,7 @@ ul {
 .gallery .box {
     padding: 15px;
     background-color: white;
-    box-shadow:  0px 12px 20px 0px rgb(0 0 0 / 13%) , 0px 2px 4px 0px rgb(0 0 0 / 12%) ;
+    box-shadow: 0px 12px 20px 0px rgb(0 0 0 / 13%), 0px 2px 4px 0px rgb(0 0 0 / 12%);
 }
 
 .gallery .box .image {
@@ -508,9 +508,9 @@ ul {
 .gallery .box .image::before {
     content: "";
     position: absolute;
-    top:50%;
+    top: 50%;
     left: 50%;
-    transform: translate(-50% , -50%);
+    transform: translate(-50%, -50%);
     background-color: rgb(255 255 255 / 20%);
     width: 0;
     height: 0;
@@ -518,13 +518,15 @@ ul {
     z-index: 2;
 }
 
-.gallery .box .image:hover::before{
-    animation: flashing 0.7s ;
+.gallery .box .image:hover::before {
+    animation: flashing 0.7s;
 }
+
 .gallery .box img {
     max-width: 100%;
     transition: var(--main-transition);
 }
+
 .gallery .box .image:hover img {
     transform: rotate(5deg) scale(1.1);
 }
@@ -556,7 +558,7 @@ ul {
     overflow: hidden;
 }
 
-.features .box .img-holder::before{
+.features .box .img-holder::before {
     content: "";
     position: absolute;
     left: 0;
@@ -565,14 +567,14 @@ ul {
     height: 100%;
 }
 
-.features .box .img-holder::after{
+.features .box .img-holder::after {
     content: "";
     position: absolute;
     bottom: 0;
     right: 0;
     border-style: solid;
     border-width: 0px 0px 170px 500px;
-    border-color: transparent transparent white transparent ;
+    border-color: transparent transparent white transparent;
     transition: var(--main-transition);
 }
 
@@ -580,18 +582,19 @@ ul {
     max-width: 100%;
 }
 
-.features .box:hover .img-holder::after{
+.features .box:hover .img-holder::after {
     border-width: 170px 500px 170px 0px;
 
 }
 
 @media (max-width:992px) {
-    .features .box .img-holder::after{
+    .features .box .img-holder::after {
         border-width: 0px 0px 170px 700px;
     }
-    .features .box:hover .img-holder::after{
+
+    .features .box:hover .img-holder::after {
         border-width: 170px 700px 170px 0px;
-    
+
     }
 }
 
@@ -632,48 +635,51 @@ ul {
     transition: var(--main-transition);
 }
 
-.features .quality .img-holder::before{
-    background-color:  rgb(244 64 54 / 60%) ;
+.features .quality .img-holder::before {
+    background-color: rgb(244 64 54 / 60%);
 }
 
-.features .quality h2::after{
+.features .quality h2::after {
     background-color: #f44036;
 }
-.features .quality a{
+
+.features .quality a {
     color: #f44036;
     border-color: #f44036;
-    background: linear-gradient(to right,#F44036 50% , white 50%);
+    background: linear-gradient(to right, #F44036 50%, white 50%);
     background-size: 200% 100%;
     background-position: right bottom;
 }
 
 
-.features .time .img-holder::before{
-    background-color:  rgb(0 150 136 / 60%) ;
+.features .time .img-holder::before {
+    background-color: rgb(0 150 136 / 60%);
 }
 
-.features .time h2::after{
+.features .time h2::after {
     background-color: #009688;
 }
-.features .time a{
+
+.features .time a {
     color: #009688;
     border-color: #009688;
-    background: linear-gradient(to right,#009688 50% , white 50%);
+    background: linear-gradient(to right, #009688 50%, white 50%);
     background-size: 200% 100%;
     background-position: right bottom;
 }
 
-.features .passion .img-holder::before{
-    background-color:  rgb(3 169 244 / 60%) ;
+.features .passion .img-holder::before {
+    background-color: rgb(3 169 244 / 60%);
 }
 
-.features .passion h2::after{
+.features .passion h2::after {
     background-color: #03a9f4;
 }
-.features .passion a{
+
+.features .passion a {
     color: #03a9f4;
     border-color: #03a9f4;
-    background: linear-gradient(to right,#03a9f4 50% , white 50%);
+    background: linear-gradient(to right, #03a9f4 50%, white 50%);
     background-size: 200% 100%;
     background-position: right bottom;
 }
@@ -692,44 +698,52 @@ ul {
     position: relative;
     background-color: var(--section-background);
 }
-.testimonials .container{
+
+.testimonials .container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
     gap: 40px;
-}   
-.testimonials .box{
+}
+
+.testimonials .box {
     padding: 20px;
     background-color: white;
     box-shadow: 0 2px 4px rgb(0 0 0 / 7%);
     border-radius: 6px;
     position: relative;
 }
-.testimonials .box img{
+
+.testimonials .box img {
     position: absolute;
     right: -10px;
-    top:-50px;
+    top: -50px;
     width: 100px;
     height: 100px;
     border-radius: 50%;
     border: 10px solid var(--section-background);
 }
-.testimonials .box h3{
+
+.testimonials .box h3 {
     margin: 0 0 10px;
 }
-.testimonials .box .title{
+
+.testimonials .box .title {
     color: #777;
     margin-bottom: 10px;
     display: block;
 }
-.testimonials .box .rate .filled{
+
+.testimonials .box .rate .filled {
     color: #FFC107;
 }
-.testimonials .box p{
+
+.testimonials .box p {
     line-height: 1.5;
     color: #777;
     margin-top: 10px;
     margin-bottom: 0;
 }
+
 /* End Testimonials */
 
 /* Start Team */
@@ -747,7 +761,7 @@ ul {
 
 .team .box {
     position: relative;
-    
+
 }
 
 .team .box::before,
@@ -762,18 +776,18 @@ ul {
     transition: var(--main-transition);
 }
 
-.team .box::before{
+.team .box::before {
     width: calc(100% - 60px);
     z-index: -2;
 }
 
 @media (max-width:767px) {
-    .team .box::before{
+    .team .box::before {
         width: 100%;
     }
 }
 
-.team .box::after{
+.team .box::after {
     z-index: -1;
     background-color: #e4e4e4;
     width: 0;
@@ -806,7 +820,7 @@ ul {
     display: flex;
     align-items: center;
     flex-direction: column;
-    gap:20px;
+    gap: 20px;
 }
 
 .team .box .data .social a {
@@ -814,7 +828,7 @@ ul {
     height: 30px;
     display: flex;
     justify-content: center;
-    align-items: center;    
+    align-items: center;
 }
 
 .team .box .data .social a:hover i {
@@ -827,7 +841,7 @@ ul {
 }
 
 
-.team .box .info{
+.team .box .info {
     padding-left: 80px;
 }
 
@@ -858,6 +872,7 @@ ul {
     background-color: var(--section-background);
 
 }
+
 .sevices .container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
@@ -866,7 +881,7 @@ ul {
 
 .sevices .box {
     background-color: white;
-    box-shadow: 0 12px 20px 0 rgb(0 0 0 / 13%) , 0 2px 4px 0 rgb(0 0 0 / 12%) ;
+    box-shadow: 0 12px 20px 0 rgb(0 0 0 / 13%), 0 2px 4px 0 rgb(0 0 0 / 12%);
     counter-increment: services;
     transition: var(--main-transition);
     position: relative;
@@ -884,28 +899,29 @@ ul {
     width: 0;
     transition: var(--main-transition);
 }
+
 .sevices .box:hover {
     transform: translateY(-10px);
 }
 
 .sevices .box:hover::before {
- width: 100%;
+    width: 100%;
 }
 
-.sevices .box > i {
+.sevices .box>i {
     margin: 30px auto 20px;
     display: block;
     text-align: center;
     color: #D5D5D5;
-    
+
 }
 
-.sevices .box > h3 {
+.sevices .box>h3 {
     text-align: center;
     margin: 20px 0 40px;
     font-size: 25px;
     color: var(--main-color);
-        
+
 }
 
 
@@ -947,9 +963,69 @@ ul {
 
 .sevices .box .info a {
     color: var(--main-color);
+
+}
+
+/* End Sevices */
+
+/* Start Skills  */
+.our-skills {
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+    position: relative;
+}
+
+.our-skills .container {
+    display: flex;
+    align-items: center;
+}
+
+
+.our-skills img {
     
 }
-/* End Sevices */
+
+@media (max-width:991px) {
+    .our-skills img {
+        display: none;
+    }
+    
+}
+
+.our-skills .skills {
+    flex: 1;
+}
+
+.our-skills  .skill h3 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin: 15px 0;
+}
+
+.our-skills  .skill h3 span {
+    font-size: 12px;
+    border: 1px solid #CCC;
+    padding: 3px 5px;
+    border-radius: 4px;
+    color: var(--main-color);
+}
+
+.our-skills  .skill .the-progress {
+    height: 30px;
+    background-color: #EEE;
+    position: relative;
+}
+
+.our-skills  .skill .the-progress span {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    background-color: var(--main-color);
+}
+
+/* End Skills  */
 
 /* Start Animation */
 @keyframes up-and-down {
@@ -1018,10 +1094,13 @@ ul {
 }
 
 @keyframes flashing {
-    0% , 40% {
+
+    0%,
+    40% {
         opacity: 1;
-  
+
     }
+
     100% {
         opacity: 0;
         width: 200%;
@@ -1030,4 +1109,3 @@ ul {
 }
 
 /* End Animation */
-
