--- a/css/elzero.css
+++ b/css/elzero.css
@@ -1333,22 +1333,96 @@ ul {
     width: 100%;
 }
 
+@media (min-width: 1200px) {
+    .pricing .box.popular {
+        top:-20px;
+    }
+}
 
-.pricing .box .title {}
+.pricing .box.popular .label {
+    position: absolute;
+    writing-mode: vertical-rl;
+    background-color: var(--main-color);
+    color: white;
+    font-weight: bold;
+    padding: 10px 10px 35px 10px;
+    font-size: 18px;
+    right: 20px;
+    width: 40px;
+}
 
-.pricing .box img {}
+.pricing .box.popular .label::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    right: 0;
+    border-style: solid;
+    border-color: transparent transparent white transparent;
+    border-width: 20px;
+}
 
-.pricing .box .price {}
 
-.pricing .box .price .amout {}
+.pricing .box .title {
+    font-weight: bold;
+    margin: 30px 0;
+    font-size: 25px;
+    letter-spacing: -1px;
+}
 
-.pricing .box .price .time {}
+.pricing .box img {
+    width: 80px;
+    margin-bottom: 30px;
+}
 
-.pricing .box ul {}
+.pricing .box .price {
+    margin-bottom: 20px;
+}
 
-.pricing .box ul li {}
+.pricing .box .price .amout {
+    display: block;
+    font-size: 60px;
+    font-weight: bold;
+    margin-bottom: 5px;
+    color: var(--main-color);
+}
 
-.pricing .box a {}
+.pricing .box .price .time {
+    color: #777;
+}
+
+.pricing .box ul {
+    text-align: left;
+}
+
+.pricing .box ul li {
+    padding: 20px;
+    border-top:1px solid #eee ;
+}
+
+.pricing .box ul li::before {
+    font-family: "Font Awesome 5 Free";
+    content: "\f00c";
+    margin-right: 10px;
+    font-weight: 900;
+    color: var(--main-color);
+}
+
+.pricing .box a {
+    display: block;
+    width: fit-content;
+    border: 2px solid var(--main-color);
+    color: var(--main-color);
+    margin: 30px auto 40px;
+    padding: 15px 20px;
+    border-radius: 6px;
+    font-weight: bold;
+    transition: var(--main-transition);
+}
+.pricing .box a:hover {
+    background-color: var(--main-color-alt);
+    border-color: var(--main-color-alt);
+    color: white;
+}
 
 
 /* End Pricing */
