--- a/css/elzero.css
+++ b/css/elzero.css
@@ -1307,7 +1307,7 @@ ul {
 }
 
 .pricing .box::after,
-.pricing .box::before{
+.pricing .box::before {
     content: "";
     width: 0;
     height: 50%;
@@ -1318,7 +1318,7 @@ ul {
 }
 
 
-.pricing .box::before{
+.pricing .box::before {
     left: 0;
     top: 0;
 }
@@ -1329,13 +1329,13 @@ ul {
 }
 
 .pricing .box:hover::after,
-.pricing .box:hover::before{
+.pricing .box:hover::before {
     width: 100%;
 }
 
 @media (min-width: 1200px) {
     .pricing .box.popular {
-        top:-20px;
+        top: -20px;
     }
 }
 
@@ -1396,7 +1396,7 @@ ul {
 
 .pricing .box ul li {
     padding: 20px;
-    border-top:1px solid #eee ;
+    border-top: 1px solid #eee;
 }
 
 .pricing .box ul li::before {
@@ -1418,6 +1418,7 @@ ul {
     font-weight: bold;
     transition: var(--main-transition);
 }
+
 .pricing .box a:hover {
     background-color: var(--main-color-alt);
     border-color: var(--main-color-alt);
@@ -1426,6 +1427,79 @@ ul {
 
 
 /* End Pricing */
+
+/* Start Videos */
+.videos {
+    padding-top: var(--main-padding-top);
+    padding-bottom: var(--main-padding-bottom);
+}
+
+.videos .holder {
+    display: flex;
+    justify-content: center;
+    background-color: var(--section-background);
+    border: 1px solid #DDD;
+}
+
+@media (max-width:991px) {
+    
+.videos .holder {
+    flex-direction: column;
+    
+}
+}
+
+.videos .holder .list {
+    min-width: 300px;
+    max-width: 100%;
+    background-color: white;
+}
+
+.videos .holder .list .name {
+    display: flex;
+    justify-content: space-between;
+    padding: 20px;
+    background-color: #F4F4F4;
+    font-weight: bold;
+}
+
+.videos .holder .list ul li {
+    padding: 20px;
+    border-top:1px solid var(--section-background);
+    cursor: pointer;
+    transition: var(--main-transition);
+}
+
+.videos .holder .list ul li:hover {
+    background-color: #FAFAFA;
+    color: var(--main-color);
+}
+
+.videos .holder .list ul li span {
+    display: block;
+    margin-top: 10px;
+    color: #777;
+}
+
+.videos .holder .preview {
+    background-color: #E2E2E2;
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.videos .holder .preview img {
+    max-width: 100%;
+}
+
+.videos .holder .preview .info {
+    padding: 20px;
+    background-color: white;
+    margin-top: 10px;
+}
+
+/* End Videos */
 
 /* Start Animation */
 @keyframes up-and-down {
