--- a/css/elzero.css
+++ b/css/elzero.css
@@ -1702,6 +1702,50 @@ ul {
 
 /* End Discount */
 
+/* Start Footer  */
+.footer {
+    background-color: #191919;
+    padding: 70px 0 0;
+}
+
+.footer .container {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 40px;
+}
+
+.footer .box {}
+
+.footer .box h3 {
+    color: white;
+    font-size: 50px ;
+    margin: 0 0 20px;
+}
+
+.footer .box .social {
+    display: flex;
+}
+
+.footer .box .social li {
+    margin-right: 10px;
+}
+
+.footer .box .social li a {
+    background-color: #313131;
+    color: #B9B9B9;
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
+    height: 50px;
+    font-size: 20px;
+    transition: var(--main-transition);
+}
+
+
+
+/* End Footer  */
+
 /* Start Animation */
 @keyframes up-and-down {
 
