--- a/css/elzero.css
+++ b/css/elzero.css
@@ -1593,6 +1593,7 @@ ul {
     min-height: 100vh;
     display: flex;
     flex-wrap: wrap;
+    padding-bottom: 50px;
 }
 
 .discount .image {
@@ -1708,23 +1709,34 @@ ul {
     padding: 70px 0 0;
 }
 
+@media (max-width: 767px) {
+    .footer {
+      text-align: center;
+    }
+  }
+
 .footer .container {
     display: grid;
     grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
     gap: 40px;
 }
 
-.footer .box {}
 
 .footer .box h3 {
     color: white;
-    font-size: 50px ;
+    font-size: 50px;
     margin: 0 0 20px;
 }
 
 .footer .box .social {
     display: flex;
 }
+
+@media (max-width: 767px) {
+    .footer .box .social {
+      justify-content: center;
+    }
+  }
 
 .footer .box .social li {
     margin-right: 10px;
@@ -1742,8 +1754,113 @@ ul {
     transition: var(--main-transition);
 }
 
+.footer .box .social .facebook:hover {
+    background-color: #1877f2;
+
+}
+
+.footer .box .social .twitter:hover {
+    background-color: #1da1f2;
+}
+
+.footer .box .social .youtube:hover {
+    background-color: #ff0000;
+}
+
+.footer .box .text {
+    line-height: 2;
+    color: #b9b9b9;
+    margin: 15px 0;
+}
+
+.footer .box .links li {
+    padding: 15px 0;
+    transition: var(--main-transition);
+}
+
+.footer .box .links li:not(:last-child) {
+    border-bottom: 1px solid #444;
+}
+
+.footer .box .links li:hover {
+    padding-left: 10px;
+}
+
+.footer .box .links li:hover a {
+    color: white;
+}
+
+.footer .box .links li a {
+    color: #b9b9b9;
+    transition: var(--main-transition);
+}
+
+.footer .box .links li a::before {
+    font-family: "Font Awesome 5 Free";
+    content: "\F101";
+    font-weight: 900;
+    color: var(--main-color);
+    margin-right: 10px;
+
+}
+
+.footer .box .line {
+    display: flex;
+    align-items: center;
+    color: #b9b9b9;
+    margin-bottom: 30px;
+}
+
+@media (max-width: 767px) {
+    .footer .box .line {
+      flex-direction: column;
+    }
+  }
 
 
+.footer .box .line i {
+    font-size: 25px;
+    color: var(--main-color);
+    margin-right: 10px;
+}
+
+@media (max-width: 767px) {
+    .footer .box .line i {
+      margin-right: 0;
+      margin-bottom: 15px;
+    }
+  }
+
+
+.footer .box .line .info {
+    line-height: 1.7;
+    flex: 1;    
+}
+
+.footer .box .line .info span {
+    display: block;
+}
+
+.footer .footer-gallery img {
+    width: 100%;
+    border: 3px solid white;
+}
+
+.footer .footer-gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(78px, 1fr));
+    gap: 8px;
+    height: fit-content;
+    width: fit-content;
+}
+
+.footer .copyright {
+    padding: 25px 0;
+    text-align: center;
+    color: white;
+    margin: 50px 0 0;
+    border-top: 1px solid #444;
+  }
 /* End Footer  */
 
 /* Start Animation */
