--- a/css/elzero.css
+++ b/css/elzero.css
@@ -120,6 +120,38 @@ ul {
 
 }
 
+.spikes {
+    position: relative;
+}
+
+.spikes::after {
+    content: "";
+    position: absolute;
+    right: 0;
+    width: 100%;
+    height: 30px;
+    z-index: 1;
+    background-image: linear-gradient(135deg, white 25%, transparent 25%), linear-gradient(225deg, white 25%, transparent 25%);
+    background-size: 30px 30px;
+}
+
+.dots {
+    background-image: url(../images/dots.png);
+    height: 186px;
+    width: 204px;
+    background-repeat: no-repeat;
+    position: absolute;
+}
+
+.dots-up {
+    top: 200px;
+    right: 0;
+}
+
+.dots-down {
+    bottom: 200px;
+    left: 0;
+}
 
 /* End Globle Rules */
 
@@ -1711,9 +1743,9 @@ ul {
 
 @media (max-width: 767px) {
     .footer {
-      text-align: center;
+        text-align: center;
     }
-  }
+}
 
 .footer .container {
     display: grid;
@@ -1734,9 +1766,9 @@ ul {
 
 @media (max-width: 767px) {
     .footer .box .social {
-      justify-content: center;
+        justify-content: center;
     }
-  }
+}
 
 .footer .box .social li {
     margin-right: 10px;
@@ -1813,9 +1845,9 @@ ul {
 
 @media (max-width: 767px) {
     .footer .box .line {
-      flex-direction: column;
+        flex-direction: column;
     }
-  }
+}
 
 
 .footer .box .line i {
@@ -1826,15 +1858,15 @@ ul {
 
 @media (max-width: 767px) {
     .footer .box .line i {
-      margin-right: 0;
-      margin-bottom: 15px;
+        margin-right: 0;
+        margin-bottom: 15px;
     }
-  }
+}
 
 
 .footer .box .line .info {
     line-height: 1.7;
-    flex: 1;    
+    flex: 1;
 }
 
 .footer .box .line .info span {
@@ -1860,7 +1892,8 @@ ul {
     color: white;
     margin: 50px 0 0;
     border-top: 1px solid #444;
-  }
+}
+
 /* End Footer  */
 
 /* Start Animation */
